--- a/package.json
+++ b/package.json
@@ -18,5 +18,15 @@
         "react-dom": "^18.2.0",
         "tailwindcss": "^3.2.1",
         "vite": "^4.0.0"
+    },
+    "dependencies": {
+        "@phosphor-icons/react": "^2.0.13",
+        "express": "^4.18.2",
+        "formik": "^2.4.5",
+        "laravel-echo": "^1.15.3",
+        "socket.io": "^4.7.2",
+        "socket.io-client": "^4.7.2",
+        "swr": "^2.2.4",
+        "yup": "^1.3.2"
     }
 }
